Rewrite community sign up page.
Simplify the community sign up page. Move wordy sections into the
community documentation and link them.

Add more rules and common misconceptions to the page. Hopefully this
will discourage people with ineligible communities that want Outreachy
general funding not to sign up.

Add a section at the top of the page and the top of the community
documentation to define what "communities" mean. We use the word so
much, but people who aren't part of open source don't understand what it
means. They think that a community is a city or a local community
organization. Make it clear that a "community" in Outreachy is either an
open source community or a non-profit.

Add documentation about Outreachy interns not being contractors for
communities or paid employees for sponsors. That should discourage
communities that want to "hire" only experienced interns and can't
provide feedback to improve that intern's skills. Outreachy isn't a
work-for-hire arrangement.

Add a note that Outreachy may consider non-American charitable
organizations to participate.

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -24,11 +24,18 @@ Community Guide | Outreachy Documentation
 	</li>
 	<li><a href='#participation-rules'>Community participation rules</a>
 		<ul>
-			<li><a href='#funding-requirements'>2.1 Funding requirements</a></li>
-			<li><a href='#licensing-requirements'>2.2 Licensing requirements</a></li>
-			<li><a href='#commercial-ties'>2.3 Commercial ties</a></li>
-			<li><a href='#community-guidelines'>2.4 Community guidelines</a></li>
-			<li><a href='#public-work-requirements'>2.5 Public work requirements</a></li>
+			<li><a href='#community-types'>Community types</a>
+				<ul>
+					<li><a href='#community-types-open-source-projects'>Community types: open source projects</a></li>
+					<li><a href='#community-types-non-profits'>Community types: non-profits</a></li>
+				</ul>
+			</li>
+			<li><a href='#not-work-for-hire'>Interns are not contractors</a></li>
+			<li><a href='#not-employees'>Interns are not employees</a></li>
+			<li><a href='#funding-requirements'>Funding requirements</a></li>
+			<li><a href='#licensing-requirements'>Licensing requirements</a></li>
+			<li><a href='#commercial-ties'>Commercial ties</a></li>
+			<li><a href='#public-work-requirements'>Public work requirements</a></li>
 		</ul>
 	</li>
 	<li><a href='#intern-funding'>Intern Funding</a>
@@ -154,21 +161,69 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h3 id='funding-requirements'><a href='#funding-requirements'>2.1 Funding requirements</a></h3>
+<h3 id='community-types'><a href='#community-types'>2.1 Community types</a></h3>
+
+<p>Two types of communities can participate in Outreachy:</p>
+<ul>
+	<li>open source projects</li>
+	<li>non-profit organizations</li>
+</ul>
+
+<h3 id='community-types-open-source-project'><a href='#community-types-open-source-project'>2.1.1. Community types: open source project</a></h3>
+
+<p>All free software communities that participate in Outreachy need to be well-established. Core team members (either paid or volunteer) should be regularly contributing to the community.</p>
+
+<p>Outreachy interns benefit from working with a variety of community members who can help review their work and answer questions.</p>
+
+<p>We encourage communities with more than 5 core contributors to participate. However, this is not a strict requirement.</p>
+
+<h3 id='community-types-non-profits'><a href='#community-types-non-profits'>2.1.2. Community types: Non-profits</a></h3>
+
+<p>American non-profit 501(c)(3) charities and 501(c)(6) trade organizations can participate as Outreachy mentoring communities. Outreachy organizers will also consider charitable organizations in other countries.</p>
+
+<p>There is no restriction on the size of the charitable organization that can participate in Outreachy.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h3 id='not-work-for-hire'><a href='#not-work-for-hire'>2.2 Interns are not contractors</a></h3>
+
+<p>Outreachy internships are <b>not</b> a way to find a contractor to work on your project. Instead, the goal is to introduce open source best practices to Outreachy interns.</p>
+
+<p>Outreachy internships are considered fellowships. The goal of the Outreachy internship is for interns to learn about working in open source. Outreachy mentors will adjust the project goals according to the intern's skills and interests. Outreachy mentors should not expect a particular goal to be accomplished by the Outreachy intern.</p>
+
+<p>Outreachy is not a way to find a skill set that your community lacks. Mentors should be able to coach Outreachy interns on the skills they use in the project. For example, if a community wants an Outreachy intern work on a JavaScript project, they need at least one mentor experienced in JavaScript. If the community could not find a mentor experienced in JavaScript, the project should not participate in Outreachy.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h3 id='not-employees'><a href='#not-employees'>2.3 Interns are not employees</a></h3>
+
+<p>Outreachy interns are not employees of any Outreachy sponsor.</p>
+
+<p>Outreachy cannot "place" interns in for-profit companies. Outreachy interns work directly with mentors from open source communities. They do not work for companies.</p>
+
+<p>Outreachy interns are not employees of the open source communities.</p>
+
+<p>Outreachy interns are self-employed contractors. They work under contract with Outreachy's parent non-profit organization, Software Freedom Conservancy. Conservancy is an American 501c3 charitable organization. Conservancy handles Outreachy intern contracts, tax paperwork, and internship stipend payment.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+<h3 id='funding-requirements'><a href='#funding-requirements'>2.4 Funding requirements</a></h3>
 
 {% include 'home/snippet/funding_short_description.html' %}
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h3 id='licensing-requirements'><a href='#licensing-requirements'>2.2 Licensing requirements</a></h3>
+<h3 id='licensing-requirements'><a href='#licensing-requirements'>2.5 Licensing requirements</a></h3>
 
 {% include "home/snippet/license-requirements.html" %}
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h3 id='commercial-ties'><a href='#commercial-ties'>2.3 Commercial ties</a></h3>
+<h3 id='commercial-ties'><a href='#commercial-ties'>2.6 Commercial ties</a></h3>
 
 <p>Free and open source communities that participate in Outreachy must forward free and open source software in public interest.</p>
 
@@ -183,20 +238,7 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h3 id='community-guidelines'><a href='#community-guidelines'>2.4 Community guidelines</a></h3>
-
-<p>All free software communities that participate in Outreachy need to be well-established. Core team members (either paid or volunteer) should be regularly contributing to the community.</p>
-
-<p>Outreachy interns benefit from working with a variety of community members who can help review their work and answer questions.</p>
-
-<p>We encourage communities with more than 5 core contributors to participate. However, this is not a strict requirement.</p>
-
-<p>Non-profit 501(c)(3) charities and 501(c)(6) trade organizations of any size offering free software projects are welcome to participate as a mentoring community.</p>
-
-<p><a href='#toc'><u>↑ table of contents</u></a></p>
-<hr>
-
-<h3 id='public-work-requirements'><a href='#public-work-requirements'>2.5 Public work requirements</a></h3>
+<h3 id='public-work-requirements'><a href='#public-work-requirements'>2.7 Public work requirements</a></h3>
 
 <p>All work done by Outreachy interns should be public. While interns may communicate with their mentors privately, mentors should encourage interns to communicate on public community channels as much as possible.</p>
 
