--- a/home/templates/home/community_participation_rules.html
+++ b/home/templates/home/community_participation_rules.html
@@ -5,33 +5,103 @@ Community participation rules
 {% endblock %}
 
 {% block content %}
-<h1>Community participation rules</h1>
+<h1>Outreachy community sign up</h1>
 
-<h2>Requirements to participate</h2>
+<p>Outreachy needs open source communities to mentor interns.</p>
 
-<h3>1. Intern funding</h3>
+<p>Please review the rules below before signing up your community.</p>
 
-{% include 'home/snippet/funding_short_description.html' %}
+<h2>Participation rules</h2>
+<hr>
 
-<h3>2. Not tied to one company</h3>
+<h3>1. Open source projects and non-profits can mentor interns</h3>
 
-<p>Participating communities cannot be tied to only one for-profit company. Please <a href="{% url 'docs-community' %}#commercial-ties">read our commercial ties rules</a>.</p>
+<div class="container mx-4">
+	<p>Two types of <b>communities</b> can participate in Outreachy:</p>
+	<ul>
+		<li><a href="{% url 'docs-community' %}#community-types-open-source-projects">open source projects</a></li>
+		<li><a href="{% url 'docs-community' %}#community-types-non-profits">non-profit organizations</a></li>
+	</ul>
+</div>
 
-<h3>3. Community coordinator</h3>
+<h3>2. Only open source intern projects</h3>
 
-<p>Each community must have a coordinator. A community coordinator is an interface between Outreachy organizers and mentors. Sometimes a community coordinators is also a mentor. <a href="https://www.outreachy.org/mentor/#coordinator">Read about community coordinator duties</a>.</p>
+<div class="container mx-4">
+	<p>All work done by the intern must be publicly released under <a href="{% url 'docs-community' %}#licensing-requirements">an open source license</a>.</p>
 
-<h3>4. Mentors</h3>
+	<p>Outreachy intern projects must <a href="{% url 'docs-community' %}#commercial-ties">not be tied to proprietary software.</a></p>
 
-<p>Each community needs to have at least one mentor. A mentor works directly with Outreachy applicants and their intern. Having more than one person mentor an intern ("co-mentoring") is encouraged.</p>
+</div>
 
-<p>Mentors must be willing to volunteer at least 5 hours a week during the internship period, and 5-10 hours per week during the application period. <a href="https://www.outreachy.org/mentor/#mentor">Read about mentor duties</a></p>
+<h3>3. No for-profit communities</h3>
 
-<h3>5. Defined intern projects</h3>
+<div class="container mx-4">
+	<p>Participating communities cannot be tied to only one for-profit company. Please <a href="{% url 'docs-community' %}#commercial-ties">read our rules about commercial ties</a>.</p>
+</div>
 
-<p>Each mentor defines a project for their intern to work on. Outreachy does not allow applicants to define their own project. <a href="https://www.outreachy.org/mentor/mentor-faq/#define-a-project">Read about what makes a good Outreachy project.</a></p>
+<br>
+<h2>Participation requirements</h2>
+<hr>
 
-<p>Projects must be <a href="{% url 'docs-community' %}#licensing-requirements">licensed as open source</a>. Projects must further free software, and <a href="{% url 'docs-community' %}#commercial-ties">not be tied to proprietary software.</a></p>
+<h3>1. Intern funding is required</h3>
 
-<p><a class='btn btn-success' href="{% url 'community-add' %}">Submit community application</a></p>
+<div class="container mx-4">
+	<p>Open source communities must find <a href="{% url 'docs-community' %}#intern-funding">internship funding</a> ($6,500 USD per intern):</p>
+	<ul>
+		<li>Humanitarian open source communities can apply for the <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy general fund.</a></li>
+		<li>Other communities must fund their own intern, or find a sponsor.</li>
+	</ul>
+	<p>Once funding for one intern is secured, communities can <a href="{% url 'docs-community' %}#partial-general-funding" %}>request additional funding</a> from the Outreachy general fund.</p>
+</div>
+
+<h3>2. A community coordinator is required</h3>
+
+<div class="container mx-4">
+	<p>Each community must have a coordinator. A community coordinator is an interface between Outreachy organizers and mentors. Sometimes a community coordinators is also a mentor. <a href="https://www.outreachy.org/mentor/#coordinator">Read about community coordinator duties</a>.</p>
+</div>
+
+<h3>3. A mentor is required</h3>
+
+<div class="container mx-4">
+	<p>Each community needs to have at least one mentor. A mentor works directly with Outreachy applicants and their intern. Having more than one person mentor an intern ("co-mentoring") is encouraged.</p>
+
+	<p>Mentors must be willing to volunteer at least 5 hours a week during the internship period, and 5-10 hours per week during the application period. <a href="https://www.outreachy.org/mentor/#mentor">Read about mentor duties</a></p>
+</div>
+
+<h3>4. A defined project is required</h3>
+
+<div class="container mx-4">
+	<p>Each mentor defines a project for their intern to work on. Outreachy does not allow applicants to define their own project. <a href="https://www.outreachy.org/mentor/mentor-faq/#define-a-project">Read about what makes a good Outreachy project.</a></p>
+</div>
+
+<br>
+<h2>Common misconceptions</h2>
+<hr>
+<h3>1. Interns are not contractors</h3>
+
+<div class="container mx-4">
+	<p>Outreachy interns are <a href="{% url 'docs-community' %}#not-work-for-hire">not contractors for hire</a>. Outreachy's goal is to teach the intern about open source, not to get a particular project done.</p>
+</div>
+
+<h3>2. Interns are not employees</h3>
+
+<div class="container mx-4">
+	<p>Outreachy interns are <a href="{% url 'docs-community' %}#not-employees">not employees</a> of any Outreachy sponsor. Outreachy does not "place" interns with companies.
+</div>
+
+<br>
+<h2>Questions?</h2>
+<hr>
+<div class="container mx-4">
+	<p>If you have any questions, please <a href='{% url 'contact-organizers' %}'>contact Outreachy organizers</a>.</p>
+</div>
+
+
+<br>
+<h2>Sign up your community</h2>
+
+<div class="container m-4">
+	<p><a class='btn btn-success' href="{% url 'community-add' %}">Submit community application</a></p>
+</div>
+
 {% endblock content %}
