Ask new communities to provide repo links and lists of licenses.
One of the most tedious parts of new community review is actually trying
to find their source code (or creative works repo). Ask new communities
to provide links to their repositories. Ask them to provide a list of
the open source licenses used in those repos.

There are no tests to update with these fields because we don't have
tests for adding a new community. 😅 I tested this locally, but we
really should add some tests for this. I think the reason they're hard
to test is because there are several forms to test.

--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -318,6 +318,15 @@ This page is for potential mentors and coordinators only. If you are an Outreach
 
 				    <p><b>Organizations that participate in this community:</b> {{ community.newcommunity.participating_orgs }}</p>
 
+				    {% if community.newcommunity.repositories %}
+					    <p><b>Repositories:</b></p>
+					    <p>{{ community.newcommunity.repositories|linebreaksbr }}</p>
+				    {% else %}
+					    <p>Links to code or creative works repositories were not provided.</p>
+				    {% endif %}
+
+				    <p>{% if community.newcommunity.licenses_used %}<b>Open source licenses used:</b></p><p>{{ community.newcommunity.licenses_used|linebreaksbr }}{% else %}A list of open source licenses used was not provided.{% endif %}</p>
+
 				    <p><b>{% if community.newcommunity.governance %}<a href="{{ community.newcommunity.governance }}">Governance policy</a>{% else %}Governance policy{% endif %}</b>. Organizations that participate in governance: {{ community.newcommunity.participating_orgs_in_goverance }}</p>
 
 				    <p>{% if community.newcommunity.cla %}<b><a href="{{ community.newcommunity.cla }}">CLA</a></b>{% else %}CLA not provided{% endif %}</p>
