--- a/home/templates/home/newcommunity_form.html
+++ b/home/templates/home/newcommunity_form.html
@@ -23,7 +23,7 @@ Community participation application
 		{% elif 'other mentorship programs' in field.label_tag %}
 			<h2>2. Mentor Experience Assessment</h2>
 			<hr>
-		{% elif 'Approved license' in field.label_tag %}
+		{% elif 'List of repositories' in field.label_tag %}
 			<h2>3. License Assessment</h2>
 			<hr>
 		{% elif "Contributor License Agreement" in field.label_tag %}
